Non-planar faces cause assertion failure when decimating #89345

Closed
opened 2021-06-22 01:30:01 +02:00 by Fen · 4 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-21 16:25, hash: b11a463e4f
Worked: Assert was introduced by 819152527f, so any prior commit should be fine

Short description of error
Decimating a non-planar face causes an assertion failure.

Exact steps for others to reproduce the error

  1. Delete the starting scene
  2. Create a Plane
  3. Go into edit mode
  4. Move one of the vertices so that the mesh isn't planar
  5. Decimate the face
  6. Assertion failure

Obviously, this requires a debug build.

Failing assertion:

#ifdef DEBUG
  /* The face normal is used for projecting faces into 2D space for tessellation.
   * Invalid normals may result in invalid tessellation.
   * Either `face_normal` should be true or normals should be updated first. */
  BLI_assert(face_normal || BM_face_is_normal_valid(efa));
#endif
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-21 16:25, hash: b11a463e4f Worked: Assert was introduced by 819152527f, so any prior commit should be fine **Short description of error** Decimating a non-planar face causes an assertion failure. **Exact steps for others to reproduce the error** 1. Delete the starting scene 2. Create a Plane 3. Go into edit mode 4. Move one of the vertices so that the mesh isn't planar 5. Decimate the face 6. Assertion failure Obviously, this requires a debug build. Failing assertion: ``` #ifdef DEBUG /* The face normal is used for projecting faces into 2D space for tessellation. * Invalid normals may result in invalid tessellation. * Either `face_normal` should be true or normals should be updated first. */ BLI_assert(face_normal || BM_face_is_normal_valid(efa)); #endif ```
Author

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 01234b430b

This issue was referenced by 01234b430b506daf692fada162a73846109c03c3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-06-22 10:30:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89345
No description provided.