Fix T89345: Edit-mesh decimate doesn't update face normals

Invalid face normals were used for tessellation.