source/blender/bmesh/tools/bmesh_decimate_collapse.c
@@ -1285,6 +1285,11 @@ static bool bm_decim_edge_collapse(BMesh *bm,
  *        a vertex group is the usual source for this.
  * \param symmetry_axis: Axis of symmetry, -1 to disable mirror decimate.
  * \param symmetry_eps: Threshold when matching mirror verts.
+ *
+ * \note The caller is responsible for recalculating face and vertex normals.
+ * - Vertex normals are maintained while decimating,
+ *   although they won't necessarily match the final recalculated normals.
+ * - Face normals are not maintained at all.
  */
 void BM_mesh_decimate_collapse(BMesh *bm,
                                const float factor,
